infrastructure/moltinator/manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moltbot-manager
  namespace: moltbot
spec:
  selector:
    app: moltbot-manager
  ports:
  - protocol: TCP
    port: 80
    targetPort: 18789
  type: ClusterIP
